--- a/starweb/app/assets/stylesheets/application.css.erb
+++ b/starweb/app/assets/stylesheets/application.css.erb
@@ -10,6 +10,12 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require css/materialize.min.css
+ *= require bootstrap.css
+ *= require font-awesome.css	
+ *= require morris/morris-0.4.3.min.css
+ *= require custom-styles.css
+ *= require Lightweight-Chart/cssCharts.css
  *= require_tree .
  *= require_self
  */
