--- a/starweb/app/assets/stylesheets/custom-styles.css
+++ b/starweb/app/assets/stylesheets/custom-styles.css
@@ -13,6 +13,10 @@ body {
     background: #1F2837;
 }
 
+a:hover, a:focus{
+  color: #cecece !important;
+}
+
  #wrapper {
     width: 100%;
 }
@@ -459,7 +463,7 @@ padding-top: 4px;
 .sidebar-collapse > .nav > li {
 	border-bottom: 1px solid rgba(107, 108, 109, 0.08);
 }
-ul.nav.nav-second-level.collapse.in {background: #121821;}
+ul.nav.nav-second-level.collapse.in {/*background: #121821;*/}
 .sidebar-collapse .nav > li > a:hover,
 .sidebar-collapse .nav > li > a:focus {
 	 
