--- a/starweb/app/views/home/index.html.erb
+++ b/starweb/app/views/home/index.html.erb
@@ -3,34 +3,34 @@
         <ul class="nav" id="main-menu">
 
 	        <li>
-	            <a class="active-menu waves-effect waves-dark" href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a>
+	            <a class="active-menu waves-effect waves-dark" href="index.html"><i class="fa fa-dashboard"></i>Inicio</a>
 	        </li>
 	        <li>
-	            <a href="ui-elements.html" class="waves-effect waves-dark"><i class="fa fa-desktop"></i> UI Elements</a>
+	            <a href="ui-elements.html" class="waves-effect waves-dark"><i class="fa fa-desktop"></i> Pedidos</a>
 	        </li>
 			<li>
-	            <a href="chart.html" class="waves-effect waves-dark"><i class="fa fa-bar-chart-o"></i> Charts</a>
+	            <a href="chart.html" class="waves-effect waves-dark"><i class="fa fa-bar-chart-o"></i> Clientes</a>
 	        </li>
 	        <li>
-	            <a href="tab-panel.html" class="waves-effect waves-dark"><i class="fa fa-qrcode"></i> Tabs & Panels</a>
+	            <a href="tab-panel.html" class="waves-effect waves-dark"><i class="fa fa-qrcode"></i> Venta</a>
 	        </li>
 	        
 	        <li>
-	            <a href="table.html" class="waves-effect waves-dark"><i class="fa fa-table"></i> Responsive Tables</a>
+	            <a href="table.html" class="waves-effect waves-dark"><i class="fa fa-table"></i> Insumos</a>
 	        </li>
 	        <li>
-	            <a href="form.html" class="waves-effect waves-dark"><i class="fa fa-edit"></i> Forms </a>
+	            <a href="form.html" class="waves-effect waves-dark"><i class="fa fa-edit"></i> Productos </a>
 	        </li>
 
 
             <li>
-                <a href="#" class="waves-effect waves-dark"><i class="fa fa-sitemap"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
+                <a href="#" class="waves-effect waves-dark"><i class="fa fa-sitemap"></i> Admin<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a href="#">Second Level Link</a>
+                        <a href="#">Usuarios</a>
                     </li>
                     <li>
-                        <a href="#">Second Level Link</a>
+                        <a href="#">Informes</a>
                     </li>
                     <li>
                         <a href="#">Second Level Link<span class="fa arrow"></span></a>
