--- a/starweb/app/views/partials/_footer.html.erb
+++ b/starweb/app/views/partials/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer><p>All right reserved. Template by: <a href="https://webthemez.com/admin-template/">WebThemez.com</a></p>
+<footer><p>4to año, Análisis de sistemas - UNAE</p>
 
 
 </footer>
