--- a/starweb/app/views/colors/index.html.erb
+++ b/starweb/app/views/colors/index.html.erb
@@ -1,68 +1,47 @@
-<div id="page-wrapper">
-    <div class="header"> 
-        <h1 class="page-header">
-            Empty Page <small>Create new page.</small>
-        </h1>
-        <ol class="breadcrumb">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Empty</a></li>
-            <li class="active">Data</li>
-        </ol> 
+<div class="header"> 
+    <h1 class="page-header">
+        Colores
+    </h1>
+    <ol class="breadcrumb">
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Colores</a></li>
+        <li class="active">Index</li>
+    </ol> 
+</div>
 
-    </div>
-
-    <div id="page-inner"> 
-
-        <div class="row">
-
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-action">
-                    Empty Page
-                    </div>  
-
-                    <div class="card-content"> 
-                        <div class="row">
-                              <!--   Kitchen Sink -->
-
-                                    <div class="card-content">
-                                        <h1>Colores</h1><br>
-                                        <div class="table-responsive">
-                                            <table class="table table-striped table-bordered table-hover">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Description</th>
-                                                        <th>Editar</th>
-                                                        <th>Eliminar</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <% @colors.each do |color| %>
-                                                        <tr>
-                                                            <td><%= color.description %></td>
-                                                            <td><%= link_to '', edit_color_path(color), class: 'glyphicon glyphicon-pencil' %></td>
-                                                            <td><%= link_to '' , color, method: :delete, data: { confirm: 'Estás seguro?' }, class: "glyphicon glyphicon-remove"  %></td>
-                                                        </tr>
-                                                    <% end %>
-                                                </tbody>
-                                            </table>
-                                            <%= link_to 'Nuevo color', new_color_path %>
-                                        </div>
-                                    </div>
-                                 <!-- End  Kitchen Sink -->
+<div id="page-inner">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-content"> 
+                    <div class="row">
+                        <div class="card-content">
+                            <h3>Colores creados</h3><br>
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>Description</th>
+                                            <th>Editar</th>
+                                            <th>Eliminar</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <% @colors.each do |color| %>
+                                            <tr>
+                                                <td><%= color.description %></td>
+                                                <td><%= link_to '', edit_color_path(color), class: 'glyphicon glyphicon-pencil' %></td>
+                                                <td><%= link_to '' , color, method: :delete, data: { confirm: 'Estás seguro?' }, class: "glyphicon glyphicon-remove"  %></td>
+                                            </tr>
+                                        <% end %>
+                                    </tbody>
+                                </table>
+                                <%= link_to 'Nuevo color', new_color_path %>
+                            </div>
                         </div>
-                    
-                        <div class="clearBoth"><br/></div>
-
                     </div>
                 </div>
-
-                <footer>
-                    <p>All right reserved. Template by: <a href="https://webthemez.com/admin-template/">WebThemez.com</a></p>
-                </footer>
             </div>
-            <!-- /. PAGE INNER  -->
         </div>
-        <!-- /. PAGE WRAPPER  -->
     </div>
 </div>
