--- a/starweb/app/views/layouts/application.html.erb
+++ b/starweb/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Google Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
@@ -16,8 +18,11 @@
   <body>
     <div id="wrapper">
     <%= render "partials/navigation" %>
-    <%= yield %> 
-    <%= render "partials/footer" %>
+    <div id="page-wrapper">
+        <%= yield %>
+        <%= render "partials/footer" %>
+    </div>
+
     </div>
 
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
