--- a/starweb/app/views/colors/_form.html.erb
+++ b/starweb/app/views/colors/_form.html.erb
@@ -1,22 +1,20 @@
 <%= form_with(model: color, local: true) do |form| %>
-  <% if color.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(color.errors.count, "error") %> prohibited this color from being saved:</h2>
+<% if color.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(color.errors.count, "error") %> prohibited this color from being saved:</h2>
 
-      <ul>
-      <% color.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_field :description %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <ul>
+    <% color.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+<div class="field">
+  <%= form.label 'Descripción' %>
+  <%= form.text_field :description %>
+</div>
+<div class="actions">
+  <%= form.submit class: 'btn btn-primary' %>
+</div>
 <% end %>
