--- a/starweb/app/views/colors/edit.html.erb
+++ b/starweb/app/views/colors/edit.html.erb
@@ -1,6 +1,33 @@
-<h1>Editing Color</h1>
+<div class="header"> 
+  <h1 class="page-header">
+    Colores
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Colores</a></li>
+    <li class="active">Nuevo</li>
+  </ol> 
+</div>
 
-<%= render 'form', color: @color %>
+<div id="page-inner"> 
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-content"> 
+          <p>
+            <h3>Editar Color</h3><br>
+            
+            <%= render 'form', color: @color %><br>
 
-<%= link_to 'Show', @color %> |
-<%= link_to 'Back', colors_path %>
+            <%= link_to 'Volver', colors_path %>
+          </p>
+
+          <div class="clearBoth"><br/></div>
+
+        </div>
+      </div>
+    </div>
+    <!-- /. PAGE INNER  -->
+  </div>
+  <!-- /. PAGE WRAPPER  -->
+</div>
