--- a/starweb/app/views/sponsors/_form.html.erb
+++ b/starweb/app/views/sponsors/_form.html.erb
@@ -12,16 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label 'Nombre' %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :image %>
-    <%= form.text_field :image %>
-  </div>
+    <%= form.label 'Logo' %>
+    <%= form.file_field :image, class: 'field' %>
+  </div><br>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
