--- a/starweb/app/views/sponsors/index.html.erb
+++ b/starweb/app/views/sponsors/index.html.erb
@@ -1,29 +1,50 @@
-<p id="notice"><%= notice %></p>
+<div class="header"> 
+  <h1 class="page-header">
+    Auspiciantes
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Auspiciantes</a></li>
+    <li class="active">Index</li>
+  </ol> 
+</div>
 
-<h1>Sponsors</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @sponsors.each do |sponsor| %>
-      <tr>
-        <td><%= sponsor.name %></td>
-        <td><%= sponsor.image %></td>
-        <td><%= link_to 'Show', sponsor %></td>
-        <td><%= link_to 'Edit', edit_sponsor_path(sponsor) %></td>
-        <td><%= link_to 'Destroy', sponsor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Sponsor', new_sponsor_path %>
+<div id="page-inner">
+  <div class="row">
+    <div class="col-md-12">
+      <p id="notice"><%= notice %></p>
+      <div class="card">
+        <div class="card-content"> 
+          <div class="row">
+            <div class="card-content">
+              <h3>Auspiciantes registrados</h3><br>
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered table-hover">
+                  <thead>
+                    <tr>
+                      <th>Nombre</th>
+                      <th>Imagen</th>
+                      <th>Editar</th>
+                      <th>Eliminar</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% @sponsors.each do |sponsor| %>
+                      <tr>
+                        <td><%= sponsor.name %></td>
+                        <td><%= image_tag sponsor.image.url(:thumb) %></td>
+                        <td><%= link_to '', edit_sponsor_path(sponsor), class: 'fas fa-edit' %></td>
+                        <td><%= link_to '', sponsor, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></td>
+                      </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+                <%= link_to 'Nuevo auspiciante', new_sponsor_path %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
