--- a/starweb/app/views/sponsors/new.html.erb
+++ b/starweb/app/views/sponsors/new.html.erb
@@ -1,5 +1,33 @@
-<h1>New Sponsor</h1>
+<div class="header"> 
+  <h1 class="page-header">
+    Auspiciantes
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Auspiciantes</a></li>
+    <li class="active">Nuevo</li>
+  </ol> 
+</div>
 
-<%= render 'form', sponsor: @sponsor %>
+<div id="page-inner"> 
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-content"> 
+          <p>
+            <h3>Nuevo Auspiciante</h3><br>
+            
+            <%= render 'form', sponsor: @sponsor %>
 
-<%= link_to 'Back', sponsors_path %>
+            <%= link_to 'Volver', sponsors_path %>
+          </p>
+
+          <div class="clearBoth"><br/></div>
+
+        </div>
+      </div>
+    </div>
+    <!-- /. PAGE INNER  -->
+  </div>
+  <!-- /. PAGE WRAPPER  -->
+</div>
