--- a/starweb/app/views/supplies/edit.html.erb
+++ b/starweb/app/views/supplies/edit.html.erb
@@ -1,6 +1,32 @@
-<h1>Editing Supply</h1>
+<div class="header"> 
+  <h1 class="page-header">
+    Insumos
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Insumos</a></li>
+    <li class="active">Editar</li>
+  </ol> 
+</div>
 
-<%= render 'form', supply: @supply %>
+<div id="page-inner"> 
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-content"> 
+          <p>
+            <h3>Editar insumo</h3><br>
+            
+            <%= render 'form', supply: @supply %><br>
+			<%= link_to 'Volver', supplies_path %>
+          </p>
 
-<%= link_to 'Show', @supply %> |
-<%= link_to 'Back', supplies_path %>
+          <div class="clearBoth"><br/></div>
+
+        </div>
+      </div>
+    </div>
+    <!-- /. PAGE INNER  -->
+  </div>
+  <!-- /. PAGE WRAPPER  -->
+</div>
