--- a/starweb/app/views/partials/_navigation.html.erb
+++ b/starweb/app/views/partials/_navigation.html.erb
@@ -56,8 +56,16 @@
       </li>
 
       <li>
+        <%= link_to(raw("<i class='fas fa-donate '></i> Monedas"), currencies_path, class: "waves-effect waves-dark") %>
+      </li>
+
+      <li>
+        <%= link_to(raw("<i class='fas fa-donate '></i> Cotizaciones"), quotations_path, class: "waves-effect waves-dark") %>
+      </li>
+
+      <li>
         <a href="#" class="waves-effect waves-dark"><i class="fa fa-sitemap"></i> Admin<span class="fa arrow"></span></a>
-        <ul class="nav nav-second-level">
+        <!--<ul class="nav nav-second-level">
           <li>
             <a href="#">Usuarios</a>
           </li>
@@ -80,7 +88,7 @@
             </ul>
 
           </li>
-        </ul>
+        </ul>-->
       </li>
       <li>
         <a href="empty.html" class="waves-effect waves-dark"><i class="fa fa-fw fa-file"></i> Empty Page</a>
